@@ -9,8 +9,8 @@ buildscript {
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
         classpath 'com.google.gradle:osdetector-gradle-plugin:1.7.3'
         classpath 'com.github.johnrengelman:shadow:8.1.1'
-        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.6.3'
-        classpath 'com.gradle:gradle-enterprise-gradle-plugin:3.12.4' // added for windows build verification-metadata.xml error
+        classpath 'org.springframework.boot:spring-boot-gradle-plugin:3.2.3'
+        classpath 'com.gradle:gradle-enterprise-gradle-plugin:3.16.1' // added for windows build verification-metadata.xml error
     }
 }
 
@@ -31,7 +31,7 @@ configure(subprojects) {
     apply plugin: 'jacoco-report-aggregation'
     apply plugin: 'checkstyle'
 
-    sourceCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_21
 
     ext { // in alphabetical order
         bcVersion = '1.63'
@@ -47,16 +47,16 @@ configure(subprojects) {
         fontawesomefxMaterialdesignfontVersion = '2.0.26-9.1.2'
         grpcVersion = '1.42.1'
         gsonVersion = '2.8.5'
-        guavaVersion = '30.1.1-jre'
-        guiceVersion = '5.1.0'
-        moneroJavaVersion = '0.8.6'
+        guavaVersion = '32.1.1-jre'
+        guiceVersion = '7.0.0'
+        moneroJavaVersion = '0.8.33'
         httpclient5Version = '5.0'
         hamcrestVersion = '2.2'
         httpclientVersion = '4.5.12'
         httpcoreVersion = '4.4.13'
         ioVersion = '2.6'
         jacksonVersion = '2.12.1'
-        javafxVersion = '16'
+        javafxVersion = '21.0.2'
         javaxAnnotationVersion = '1.2'
         jcsvVersion = '1.4.0'
         jetbrainsAnnotationsVersion = '13.0'
@@ -69,9 +69,9 @@ configure(subprojects) {
         langVersion = '3.11'
         logbackVersion = '1.1.11'
         loggingVersion = '1.2'
-        lombokVersion = '1.18.24'
-        mockitoVersion = '5.2.0'
-        netlayerVersion = '6797461310f077bbea4f43a3a509c077b0ed8c34' // Netlayer version 0.7.3 with Tor browser version 11.0.14 and tor binary version: 0.4.7.7
+        lombokVersion = '1.18.30'
+        mockitoVersion = '5.10.0'
+        netlayerVersion = 'e2ce2a142c' // Tor browser version 13.0.15 and tor binary version: 0.4.8.11
         protobufVersion = '3.19.1'
         protocVersion = protobufVersion
         pushyVersion = '0.13.2'
@@ -163,18 +163,33 @@ configure([project(':cli'),
 
             // edit generated shell scripts such that they expect to be executed in the
             // project root dir as opposed to a 'bin' subdirectory
-            def windowsScriptFile = file("${rootProject.projectDir}/haveno-${applicationName}.bat")
-            windowsScriptFile.text = windowsScriptFile.text.replace(
-                'set APP_HOME=%DIRNAME%..', 'set APP_HOME=%DIRNAME%')
+            if (osdetector.os == 'windows') {
+                def windowsScriptFile = file("${rootProject.projectDir}/haveno-${applicationName}.bat")
+                windowsScriptFile.text = windowsScriptFile.text.replace(
+                    'set APP_HOME=%DIRNAME%..', 'set APP_HOME=%DIRNAME%')
 
-            def unixScriptFile = file("${rootProject.projectDir}/haveno-$applicationName")
-            unixScriptFile.text = unixScriptFile.text.replace(
-                'APP_HOME=$( cd "${APP_HOME:-./}.." && pwd -P ) || exit', 'APP_HOME=$( cd "${APP_HOME:-./}" && pwd -P ) || exit')
+                if (applicationName == 'desktop') {
+                    windowsScriptFile.text = windowsScriptFile.text.replace(
+                        'DEFAULT_JVM_OPTS=', 'DEFAULT_JVM_OPTS=-XX:MaxRAM=4g ' +
+                            '--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED ' +
+                            '--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED ' +
+                            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED ' +
+                            '--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED')
+                }
+            }
+            else {
+                def unixScriptFile = file("${rootProject.projectDir}/haveno-$applicationName")
+                unixScriptFile.text = unixScriptFile.text.replace(
+                    'APP_HOME=$( cd "${APP_HOME:-./}.." > /dev/null && pwd -P ) || exit', 'APP_HOME=$( cd "${APP_HOME:-./}" > /dev/null && pwd -P ) || exit')
 
-            if (applicationName == 'desktop') {
-                def script = file("${rootProject.projectDir}/haveno-$applicationName")
-                script.text = script.text.replace(
-                    'DEFAULT_JVM_OPTS=""', 'DEFAULT_JVM_OPTS="-XX:MaxRAM=4g"')
+                if (applicationName == 'desktop') {
+                    unixScriptFile.text = unixScriptFile.text.replace(
+                        'DEFAULT_JVM_OPTS=""', 'DEFAULT_JVM_OPTS="-XX:MaxRAM=4g ' +
+                            '--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED ' +
+                            '--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED ' +
+                            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED ' +
+                            '--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED"')
+                }
             }
 
             if (applicationName == 'apitest') {
@@ -302,9 +317,8 @@ configure(project(':common')) {
             exclude(module: 'animal-sniffer-annotations')
         }
 
-        // override transitive dependency version from 1.5 to the same version just identified by commit number.
-        // Remove this if transitive dependency is changed to something else than 1.5
-        implementation(group: 'com.github.JesusMcCloud', name: 'jtorctl') { version { strictly "[9b5ba2036b]" } }
+        // override transitive dependency and use latest version from bisq
+        implementation(group: 'com.github.bisq-network', name: 'jtorctl') { version { strictly "[b2a172f44edcd8deaa5ed75d936dcbb007f0d774]" } }
         implementation "org.openjfx:javafx-base:$javafxVersion:$os"
         implementation "org.openjfx:javafx-graphics:$javafxVersion:$os"
     }
@@ -320,10 +334,11 @@ configure(project(':p2p')) {
         implementation "com.google.protobuf:protobuf-java:$protobufVersion"
         implementation "org.fxmisc.easybind:easybind:$easybindVersion"
         implementation "org.slf4j:slf4j-api:$slf4jVersion"
-        implementation("com.github.bisq-network.netlayer:tor.external:$netlayerVersion") {
+        implementation "org.apache.commons:commons-lang3:$langVersion"
+        implementation("com.github.haveno-dex.netlayer:tor.external:$netlayerVersion") {
             exclude(module: 'slf4j-api')
         }
-        implementation("com.github.bisq-network.netlayer:tor.native:$netlayerVersion") {
+        implementation("com.github.haveno-dex.netlayer:tor.native:$netlayerVersion") {
             exclude(module: 'slf4j-api')
         }
         implementation("com.github.bisq-network:bitcoinj:$bitcoinjVersion") {
@@ -350,6 +365,7 @@ configure(project(':p2p')) {
         testImplementation "ch.qos.logback:logback-core:$logbackVersion"
         testImplementation "org.apache.commons:commons-lang3:$langVersion"
         testImplementation("org.mockito:mockito-core:$mockitoVersion")
+        testImplementation("org.mockito:mockito-junit-jupiter:$mockitoVersion")
 
         implementation "org.openjfx:javafx-base:$javafxVersion:$os"
         implementation "org.openjfx:javafx-graphics:$javafxVersion:$os"
@@ -384,10 +400,10 @@ configure(project(':core')) {
         implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion") {
             exclude(module: 'jackson-annotations')
         }
-        implementation("com.github.bisq-network.netlayer:tor.native:$netlayerVersion") {
+        implementation("com.github.haveno-dex.netlayer:tor.native:$netlayerVersion") {
             exclude(module: 'slf4j-api')
         }
-        implementation("com.github.bisq-network.netlayer:tor.external:$netlayerVersion") {
+        implementation("com.github.haveno-dex.netlayer:tor.external:$netlayerVersion") {
             exclude(module: 'slf4j-api')
         }
         implementation("com.github.bisq-network:bitcoinj:$bitcoinjVersion") {
@@ -419,7 +435,7 @@ configure(project(':core')) {
 
         implementation "org.openjfx:javafx-base:$javafxVersion:$os"
         implementation "org.openjfx:javafx-graphics:$javafxVersion:$os"
-        implementation("io.github.monero-ecosystem:monero-java:$moneroJavaVersion") {
+        implementation("io.github.woodser:monero-java:$moneroJavaVersion") {
             exclude(module: 'jackson-core')
             exclude(module: 'jackson-annotations')
             exclude(module: 'jackson-databind')
@@ -432,16 +448,23 @@ configure(project(':core')) {
         systemProperty 'jdk.attach.allowAttachSelf', true
     }
 
+    task generateKeypairs(type: JavaExec) {
+        mainClass = 'haveno.core.util.GenerateKeyPairs'
+        classpath = sourceSets.main.runtimeClasspath
+    }
+
     task havenoDeps {
         doLast {
             // get monero binaries download url
             Map moneroBinaries = [
-                'linux'         : 'https://github.com/haveno-dex/monero/releases/download/testing13/monero-bins-haveno-linux.tar.gz',
-                'linux-sha256'  : 'eac55092b97162854f2a94f7895d52cf4a20eba0a55a1769ce053060d6be6195',
-                'mac'           : 'https://github.com/haveno-dex/monero/releases/download/testing13/monero-bins-haveno-mac.tar.gz',
-                'mac-sha256'    : 'e7bf40ef35cb278649c63f8651cee6124d4a5e97448dfa407b193572ebd85fb6',
-                'windows'       : 'https://github.com/haveno-dex/monero/releases/download/testing13/monero-bins-haveno-windows.zip',
-                'windows-sha256': 'f7da08d793041103c069b23229040fc4f9632009317b84d201f63f477d3ca3dd'
+                'linux-x86_64'         : 'https://github.com/haveno-dex/monero/releases/download/release4/monero-bins-haveno-linux-x86_64.tar.gz',
+                'linux-x86_64-sha256'  : '0810808292fd5ad595a46a7fcc8ecb28d251d80f8d75c0e7a7d51afbeb413b68',
+                'linux-aarch64'        : 'https://github.com/haveno-dex/monero/releases/download/release4/monero-bins-haveno-linux-aarch64.tar.gz',
+                'linux-aarch64-sha256' : '61222ee8e2021aaf59ab8813543afc5548f484190ee9360bc9cfa8fdf21cc1de',
+                'mac'                  : 'https://github.com/haveno-dex/monero/releases/download/release4/monero-bins-haveno-mac.tar.gz',
+                'mac-sha256'           : '5debb8d8d8dd63809e8351368a11aa85c47987f1a8a8f2dcca343e60bcff3287',
+                'windows'              : 'https://github.com/haveno-dex/monero/releases/download/release4/monero-bins-haveno-windows.zip',
+                'windows-sha256'       : 'd7c14f029db37ae2a8bc6b74c35f572283257df5fbcc8cc97b704d1a97be9888'
             ]
 
             String osKey
@@ -450,7 +473,12 @@ configure(project(':core')) {
             } else if (Os.isFamily(Os.FAMILY_MAC)) {
                 osKey = 'mac'
             } else {
-                osKey = 'linux'
+                String architecture = System.getProperty("os.arch").toLowerCase()
+                if (architecture.contains('aarch64') || architecture.contains('arm')) {
+                    osKey = 'linux-aarch64'
+                } else {
+                    osKey = 'linux-x86_64'
+                }
             }
 
             String moneroDownloadUrl = moneroBinaries[osKey]
@@ -509,6 +537,7 @@ configure(project(':core')) {
 
         ext.downloadAndVerifyDependencies = { String archiveURL, String archiveSHA256, File destinationArchiveFile ->
             ext.dependencyDownloadedAndVerified = false
+
             // if archive exists, check to see if its already up to date
             if (destinationArchiveFile.exists()) {
                 println "Verifying existing archive ${destinationArchiveFile}"
@@ -522,14 +551,15 @@ configure(project(':core')) {
                 }
             }
 
+            // download archives
             println "Downloading ${archiveURL}"
             ant.get(src: archiveURL, dest: destinationArchiveFile)
             println 'Download saved to ' + destinationArchiveFile
 
+            // verify checksum
             println 'Verifying checksum for downloaded binary ...'
             ant.archiveHash = archiveSHA256
-            // use a different verifyProperty name from existing verification or it will always fail
-            ant.checksum(file: destinationArchiveFile, algorithm: 'SHA-256', property: '${archiveHash}', verifyProperty: 'downloadedHashMatches')
+            ant.checksum(file: destinationArchiveFile, algorithm: 'SHA-256', property: '${archiveHash}', verifyProperty: 'downloadedHashMatches') // use a different verifyProperty name from existing verification or it will always fail
             if (ant.properties['downloadedHashMatches'] != 'true') {
                 ant.fail('Checksum mismatch: Downloaded archive has a different checksum than expected')
             }
@@ -580,7 +610,7 @@ configure(project(':desktop')) {
     apply plugin: 'com.github.johnrengelman.shadow'
     apply from: 'package/package.gradle'
 
-    version = '1.0.11-SNAPSHOT'
+    version = '1.0.14-SNAPSHOT'
 
     jar.manifest.attributes(
         "Implementation-Title": project.name,
@@ -641,7 +671,7 @@ configure(project(':desktop')) {
         testImplementation "org.junit.jupiter:junit-jupiter-api:$jupiterVersion"
         testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$jupiterVersion"
 
-        implementation("io.github.monero-ecosystem:monero-java:$moneroJavaVersion") {
+        implementation("io.github.woodser:monero-java:$moneroJavaVersion") {
             exclude(module: 'jackson-core')
             exclude(module: 'jackson-annotations')
             exclude(module: 'jackson-databind')
@@ -675,10 +705,10 @@ configure(project(':monitor')) {
         implementation "ch.qos.logback:logback-core:$logbackVersion"
         implementation "com.google.guava:guava:$guavaVersion"
         implementation "org.slf4j:slf4j-api:$slf4jVersion"
-        implementation("com.github.bisq-network.netlayer:tor.external:$netlayerVersion") {
+        implementation("com.github.haveno-dex.netlayer:tor.external:$netlayerVersion") {
             exclude(module: 'slf4j-api')
         }
-        implementation("com.github.bisq-network.netlayer:tor.native:$netlayerVersion") {
+        implementation("com.github.haveno-dex.netlayer:tor.native:$netlayerVersion") {
             exclude(module: 'slf4j-api')
         }
         implementation("com.google.inject:guice:$guiceVersion") {
@@ -805,7 +835,7 @@ configure(project(':daemon')) {
         testImplementation "org.junit.jupiter:junit-jupiter-params:$jupiterVersion"
         testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$jupiterVersion")
 
-        implementation("io.github.monero-ecosystem:monero-java:$moneroJavaVersion") {
+        implementation("io.github.woodser:monero-java:$moneroJavaVersion") {
             exclude(module: 'jackson-core')
             exclude(module: 'jackson-annotations')
             exclude(module: 'jackson-databind')
